data/derived/sp14/progs/unify/prog3346.ml.out
Characters 12-46:
  let (_,_) = sepConcat ", " ["foo";"bar";"baz"];;
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a * 'b
